--- a/src/app/customer/product/product-list/product-list.component.html
+++ b/src/app/customer/product/product-list/product-list.component.html
@@ -6,7 +6,7 @@
   <div class="mobile-nav">
     <!-- Navbar Brand -->
     <div class="amado-navbar-brand">
-      <a href="newhouse/home"><img src="assets/img/core-img/logo.png" alt=""></a>
+      <a href="newhouse/home"><img src="assets/img/core-img/logo_newhouse_long.jpg" alt=""></a>
     </div>
     <!-- Navbar Toggler -->
     <div class="amado-navbar-toggler">
@@ -16,7 +16,7 @@
 
 <app-sidebar></app-sidebar>
 
- <app-category></app-category>
+
 
   <div class="amado_product_area section-padding-100">
     <div class="container-fluid">
@@ -24,32 +24,28 @@
       <div class="row">
         <div class="col-12">
           <div class="product-topbar d-xl-flex align-items-end justify-content-between">
-            <!-- Total Products -->
-            <div class="total-products">
 
-            </div>
             <!-- Sorting -->
             <div class="product-sorting d-flex">
-              <div class="sort-by-date d-flex align-items-center mr-15">
-                <p>Sort by</p>
-                <form action="#" method="get">
-                  <select name="select" id="sortBydate">
-                    <option value="value">Date</option>
-                    <option value="value">Newest</option>
-                    <option value="value">Popular</option>
-                  </select>
-                </form>
+              <div class="sort-by-date d-flex align-content-lg-around mr-15">
+                <p class="mr-15" style="background: white">Danh mục</p>
+<!--                <select name="select" id="viewProduct" [(ngModel)]="selectedItem" (click)="getDishByCategory(selectedItem)" >-->
+<!--                  <option *ngFor="let x of categoryAll" value="{{x.id}}">{{x.name}}</option>-->
+<!--                </select>-->
+                <form  [formGroup]="form">
+                <select  class="form-control" formControlName="category">
+                  <option *ngFor="let category of categoryAll" [value]="category.id">{{category.name}}</option>
+                </select>
+                  </form>
               </div>
+
               <div class="view-product d-flex align-items-center">
-                <p>View</p>
-                <form action="#" method="get">
-                  <select name="select" id="viewProduct">
-                    <option value="value">12</option>
-                    <option value="value">24</option>
-                    <option value="value">48</option>
-                    <option value="value">96</option>
-                  </select>
-                </form>
+                <p class="mr-15" style="background: white">Lọc</p>
+                <select name="select" id="sortBydate" class="ml-15">
+                  <option value="date">ngày</option>
+                  <option value="new">sản phẩm mới</option>
+                  <option value="buyLot">mua nhiều</option>
+                </select>
               </div>
             </div>
           </div>
@@ -57,15 +53,17 @@
       </div>
 
       <div class="row">
-
         <!-- Single Product Area -->
-        <div class="col-12 col-sm-4 col-md-12 col-xl-4">
+        <div class="col-12 col-sm-4 col-md-12 col-xl-4" *ngFor="let product of ProductList;">
           <div class="single-product-wrapper">
             <!-- Product Image -->
             <div class="product-img">
-              <img src="assets/img/product-img/product1.jpg" alt="">
+              <a routerLink="/newhouse/product/{{product.id}}">
+              <img src="http://localhost:8080/image/{{product.image01}}" alt="">
+
               <!-- Hover Thumb -->
-              <img class="hover-img" src="assets/product-img/product2.jpg" alt="">
+              <img class="hover-img" src="http://localhost:8080/image/{{product.image01}}" alt="">
+              </a>
             </div>
 
             <!-- Product Description -->
@@ -73,46 +71,9 @@
               <!-- Product Meta Data -->
               <div class="product-meta-data">
                 <div class="line"></div>
-                <p class="product-price">$180</p>
-                <a href="newhouse/product/1">
-                  <h6>Modern Chair</h6>
-                </a>
-              </div>
-              <!-- Ratings & Cart -->
-              <div class="ratings-cart text-right">
-                <div class="ratings">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-                <div class="cart">
-                  <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="img/core-img/cart.png" alt=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Single Product Area -->
-        <div class="col-12 col-sm-4 col-md-12 col-xl-4">
-          <div class="single-product-wrapper">
-            <!-- Product Image -->
-            <div class="product-img">
-              <img src="assets/img/product-img/product2.jpg" alt="">
-              <!-- Hover Thumb -->
-              <img class="hover-img" src="assets/img/product-img/product3.jpg" alt="">
-            </div>
-
-            <!-- Product Description -->
-            <div class="product-description d-flex align-items-center justify-content-between">
-              <!-- Product Meta Data -->
-              <div class="product-meta-data">
-                <div class="line"></div>
-                <p class="product-price">$180</p>
-                <a href="newhouse/product/1">
-                  <h6>Modern Chair</h6>
+                <p class="product-price">{{product.price}} VND</p>
+                <a routerLink="/newhouse/product/{{product.id}}">
+                  <h6>{{product.name}}</h6>
                 </a>
               </div>
               <!-- Ratings & Cart -->
@@ -132,153 +93,6 @@
           </div>
         </div>
 
-        <!-- Single Product Area -->
-        <div class="col-12 col-sm-4 col-md-12 col-xl-4">
-          <div class="single-product-wrapper">
-            <!-- Product Image -->
-            <div class="product-img">
-              <img src="assets/img/product-img/product3.jpg" alt="">
-              <!-- Hover Thumb -->
-              <img class="hover-img" src="assets/img/product-img/product4.jpg" alt="">
-            </div>
-
-            <!-- Product Description -->
-            <div class="product-description d-flex align-items-center justify-content-between">
-              <!-- Product Meta Data -->
-              <div class="product-meta-data">
-                <div class="line"></div>
-                <p class="product-price">$180</p>
-                <a href="newhouse/product/1">
-                  <h6>Modern Chair</h6>
-                </a>
-              </div>
-              <!-- Ratings & Cart -->
-              <div class="ratings-cart text-right">
-                <div class="ratings">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-                <div class="cart">
-                  <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="img/core-img/cart.png" alt=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Single Product Area -->
-        <div class="col-12 col-sm-4 col-md-12 col-xl-4">
-          <div class="single-product-wrapper">
-            <!-- Product Image -->
-            <div class="product-img">
-              <img src="assets/img/product-img/product4.jpg" alt="">
-              <!-- Hover Thumb -->
-              <img class="hover-img" src="assets/img/product-img/product5.jpg" alt="">
-            </div>
-
-            <!-- Product Description -->
-            <div class="product-description d-flex align-items-center justify-content-between">
-              <!-- Product Meta Data -->
-              <div class="product-meta-data">
-                <div class="line"></div>
-                <p class="product-price">$180</p>
-                <a href="product-details.html">
-                  <h6>Modern Chair</h6>
-                </a>
-              </div>
-              <!-- Ratings & Cart -->
-              <div class="ratings-cart text-right">
-                <div class="ratings">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-                <div class="cart">
-                  <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="assets/img/core-img/cart.png" alt=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Single Product Area -->
-        <div class="col-12 col-sm-4 col-md-12 col-xl-4">
-          <div class="single-product-wrapper">
-            <!-- Product Image -->
-            <div class="product-img">
-              <img src="assets/img/product-img/product5.jpg" alt="">
-              <!-- Hover Thumb -->
-              <img class="hover-img" src="assets/img/product-img/product6.jpg" alt="">
-            </div>
-
-            <!-- Product Description -->
-            <div class="product-description d-flex align-items-center justify-content-between">
-              <!-- Product Meta Data -->
-              <div class="product-meta-data">
-                <div class="line"></div>
-                <p class="product-price">$180</p>
-                <a href="product-details.html">
-                  <h6>Modern Chair</h6>
-                </a>
-              </div>
-              <!-- Ratings & Cart -->
-              <div class="ratings-cart text-right">
-                <div class="ratings">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-                <div class="cart">
-                  <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="assets/img/core-img/cart.png" alt=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Single Product Area -->
-        <div class="col-12 col-sm-4 col-md-12 col-xl-4">
-          <div class="single-product-wrapper">
-            <!-- Product Image -->
-            <div class="product-img">
-              <img src="assets/img/product-img/product6.jpg" alt="">
-              <!-- Hover Thumb -->
-              <img class="hover-img" src="assets/img/product-img/product1.jpg" alt="">
-            </div>
-
-            <!-- Product Description -->
-            <div class="product-description d-flex align-items-center justify-content-between">
-              <!-- Product Meta Data -->
-              <div class="product-meta-data">
-                <div class="line"></div>
-                <p class="product-price">$180</p>
-                <a href="product-details.html">
-                  <h6>Modern Chair</h6>
-                </a>
-              </div>
-              <!-- Ratings & Cart -->
-              <div class="ratings-cart text-right">
-                <div class="ratings">
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                  <i class="fa fa-star" aria-hidden="true"></i>
-                </div>
-                <div class="cart">
-                  <a href="cart.html" data-toggle="tooltip" data-placement="left" title="Add to Cart"><img src="assets/img/core-img/cart.png" alt=""></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
 
       <div class="row">
@@ -286,10 +100,10 @@
           <!-- Pagination -->
           <nav aria-label="navigation">
             <ul class="pagination justify-content-end mt-50">
-              <li class="page-item active"><a class="page-link" href="#">01.</a></li>
-              <li class="page-item"><a class="page-link" href="#">02.</a></li>
-              <li class="page-item"><a class="page-link" href="#">03.</a></li>
-              <li class="page-item"><a class="page-link" href="#">04.</a></li>
+              <li class="page-item"><a class="page-link" (click)="getAllDishes(0)">01.</a></li>
+              <li class="page-item"><a class="page-link" (click)="getAllDishes(1)">02.</a></li>
+              <li class="page-item"><a class="page-link" (click)="getAllDishes(3)">03.</a></li>
+              <li class="page-item"><a class="page-link" (click)="getAllDishes(4)" >04.</a></li>
             </ul>
           </nav>
         </div>
