--- a/src/app/customer/carts-table/carts-table.component.html
+++ b/src/app/customer/carts-table/carts-table.component.html
@@ -6,7 +6,7 @@
   <div class="mobile-nav">
     <!-- Navbar Brand -->
     <div class="amado-navbar-brand">
-      <a href="index.html"><img src="img/core-img/logo.png" alt=""></a>
+      <a href="index.html"><img src="assets/img/core-img/logo_newhouse_long.jpg" alt=""></a>
     </div>
     <!-- Navbar Toggler -->
     <div class="amado-navbar-toggler">
@@ -21,79 +21,36 @@
       <div class="row">
         <div class="col-12 col-lg-8">
           <div class="cart-title mt-50">
-            <h2>Shopping Cart</h2>
+            <h2>Giỏ Hàng</h2>
           </div>
 
           <div class="cart-table clearfix">
             <table class="table table-responsive">
               <thead>
               <tr>
-                <th></th>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Quantity</th>
+                <th> Ảnh </th>
+                <th>Tên</th>
+                <th>Giá</th>
+                <th>Số lượng</th>
               </tr>
               </thead>
               <tbody>
-              <tr>
+              <tr *ngFor="let cartDetail of cartDetailList;index as i">
                 <td class="cart_product_img">
-                  <a href="#"><img src="assets/img/bg-img/cart1.jpg" alt="Product"></a>
+                  <a href="#"><img src="{{cartDetail.dish.image01}}" alt="Product" width="50px"></a>
                 </td>
                 <td class="cart_product_desc">
-                  <h5>White Modern Chair</h5>
+                  <h5>{{cartDetail.dish.name}}</h5>
                 </td>
                 <td class="price">
-                  <span>$130</span>
+                  <span>{{cartDetail.dish.price}}</span>
                 </td>
                 <td class="qty">
                   <div class="qty-btn d-flex">
-                    <p>Qty</p>
                     <div class="quantity">
-                      <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"><i class="fa fa-minus" aria-hidden="true"></i></span>
-                      <input type="number" class="qty-text" id="qty" step="1" min="1" max="300" name="quantity" value="1">
-                      <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-plus" aria-hidden="true"></i></span>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td class="cart_product_img">
-                  <a href="#"><img src="assets/img/bg-img/cart2.jpg" alt="Product"></a>
-                </td>
-                <td class="cart_product_desc">
-                  <h5>Minimal Plant Pot</h5>
-                </td>
-                <td class="price">
-                  <span>$10</span>
-                </td>
-                <td class="qty">
-                  <div class="qty-btn d-flex">
-                    <p>Qty</p>
-                    <div class="quantity">
-                      <span class="qty-minus" onclick="var effect = document.getElementById('qty2'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"><i class="fa fa-minus" aria-hidden="true"></i></span>
-                      <input type="number" class="qty-text" id="qty2" step="1" min="1" max="300" name="quantity" value="1">
-                      <span class="qty-plus" onclick="var effect = document.getElementById('qty2'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-plus" aria-hidden="true"></i></span>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <td class="cart_product_img">
-                  <a href="#"><img src="assets/img/bg-img/cart3.jpg" alt="Product"></a>
-                </td>
-                <td class="cart_product_desc">
-                  <h5>Minimal Plant Pot</h5>
-                </td>
-                <td class="price">
-                  <span>$10</span>
-                </td>
-                <td class="qty">
-                  <div class="qty-btn d-flex">
-                    <p>Qty</p>
-                    <div class="quantity">
-                      <span class="qty-minus" onclick="var effect = document.getElementById('qty3'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"><i class="fa fa-minus" aria-hidden="true"></i></span>
-                      <input type="number" class="qty-text" id="qty3" step="1" min="1" max="300" name="quantity" value="1">
-                      <span class="qty-plus" onclick="var effect = document.getElementById('qty3'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-plus" aria-hidden="true"></i></span>
+                      <span class="qty-minus" (click)="decreaseDishQuantity(i)"><i class="fa fa-minus" aria-hidden="true"></i></span>
+                      <input type="number" class="qty-text" id="quantity" step="1" min="1" max="300" name="quantity" [value]="cartDetail.quantity">
+                      <span class="qty-plus" (click)="increaseDishQuantity(i)"><i class="fa fa-plus" aria-hidden="true"></i></span>
                     </div>
                   </div>
                 </td>
@@ -104,14 +61,14 @@
         </div>
         <div class="col-12 col-lg-4">
           <div class="cart-summary">
-            <h5>Cart Total</h5>
+            <h5>Tổng Đơn Hàng</h5>
             <ul class="summary-table">
               <li><span>subtotal:</span> <span>$140.00</span></li>
               <li><span>delivery:</span> <span>Free</span></li>
               <li><span>total:</span> <span>$140.00</span></li>
             </ul>
             <div class="cart-btn mt-100">
-              <a href="cart.html" class="btn amado-btn w-100">Checkout</a>
+              <a routerLink="/auth/register" class="btn amado-btn w-100">Thanh toán</a>
             </div>
           </div>
         </div>
