--- a/src/app/customer/product/product-detail/product-detail.component.html
+++ b/src/app/customer/product/product-detail/product-detail.component.html
@@ -6,8 +6,9 @@
   <div class="mobile-nav">
     <!-- Navbar Brand -->
     <div class="amado-navbar-brand">
-      <a href="index.html"><img src="assets/img/core-img/logo.png" alt=""></a>
+      <a href="index.html"><img src="assets/img/core-img/logo_newhouse_long.jpg" alt=""></a>
     </div>
+
     <!-- Navbar Toggler -->
     <div class="amado-navbar-toggler">
       <span></span><span></span><span></span>
@@ -24,62 +25,98 @@
         <div class="col-12">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb mt-50">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item"><a href="#">Furniture</a></li>
-              <li class="breadcrumb-item"><a href="#">Chairs</a></li>
-              <li class="breadcrumb-item active" aria-current="page">white modern chair</li>
+              <li class="breadcrumb-item"><a href="#">Sản phẩm </a></li>
+              <li class="breadcrumb-item active "><a href="#">Đồng hồ</a></li>
             </ol>
           </nav>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-12 col-lg-7">
+        <div class="col-12 col-lg-1" ></div>
+        <div class="col-12 col-lg-4">
           <div class="single_product_thumb">
-            <div id="product_details_slider" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li class="active" data-target="#product_details_slider" data-slide-to="0" style="background-image: url(assets/img/product-img/pro-big-1.jpg);">
+            <div id="product_details_slider" class="carousel slide" data-ride="carousel" *ngIf="product != null">
+              <ol class="carousel-indicators align-items-center" >
+                <li class="active"  *ngIf="product.image01 != null" data-target="#product_details_slider" data-slide-to="0" [style.background-image]="'url(' + product.image01 + ')'">
                 </li>
-                <li data-target="#product_details_slider" data-slide-to="1" style="background-image: url(assets/img/product-img/pro-big-2.jpg);">
+                <li *ngIf="product.image02 != null" data-target="#product_details_slider" data-slide-to="1" [style.background-image]="'url(' + product.image02 + ')'">
                 </li>
-                <li data-target="#product_details_slider" data-slide-to="2" style="background-image: url(assets/img/product-img/pro-big-3.jpg);">
+                <li  *ngIf="product.image03 != null" data-target="#product_details_slider" data-slide-to="2" [style.background-image]="'url(' + product.image03 + ')'">
                 </li>
-                <li data-target="#product_details_slider" data-slide-to="3" style="background-image: url(assets/img/product-img/pro-big-4.jpg);">
+                <li *ngIf="product.image04 != null" data-target="#product_details_slider" data-slide-to="3" [style.background-image]="'url(' + product.image04 + ')'">
                 </li>
+<!--                <li   *ngIf="product.image05 != null" data-target="#product_details_slider" data-slide-to="0" [style.background-image]="'url(' + product.image05 + ')'">-->
+<!--                </li>-->
+<!--                <li *ngIf="product.image06!= null" data-target="#product_details_slider" data-slide-to="1" [style.background-image]="'url(' + product.image06 + ')'">-->
+<!--                </li>-->
+<!--                <li  *ngIf="product.image07 != null" data-target="#product_details_slider" data-slide-to="2" [style.background-image]="'url(' + product.image07 + ')'">-->
+<!--                </li>-->
+<!--                <li *ngIf="product.image08 != null" data-target="#product_details_slider" data-slide-to="3" [style.background-image]="'url(' + product.image08 + ')'">-->
+<!--                </li>-->
               </ol>
+
               <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <a class="gallery_img" href="assets/img/product-img/pro-big-1.jpg">
-                    <img class="d-block w-100" src="assets/img/product-img/pro-big-1.jpg" alt="First slide">
+
+                <div class="carousel-item active " *ngIf="product.image01 != null">
+                  <a class="gallery_img" href="{{product.image01}}">
+                    <img class="d-block  w-100" src="{{product.image01}}" alt="First slide">
                   </a>
                 </div>
-                <div class="carousel-item">
-                  <a class="gallery_img" href="assets/img/product-img/pro-big-2.jpg">
-                    <img class="d-block w-100" src="assets/img/product-img/pro-big-2.jpg" alt="Second slide">
+                <div class="carousel-item" *ngIf="product.image02 != null">
+                  <a class="gallery_img" href="{{product.image02}}">
+                    <img class="d-block w-100"  src="{{product.image02}}" alt="Second slide">
                   </a>
                 </div>
-                <div class="carousel-item">
-                  <a class="gallery_img" href="assets/img/product-img/pro-big-3.jpg">
-                    <img class="d-block w-100" src="assets/img/product-img/pro-big-3.jpg" alt="Third slide">
+                <div class="carousel-item" *ngIf="product.image03 != null">
+                  <a class="gallery_img" href="{{product.image03}}">
+                    <img class="d-block  w-100" src="{{product.image03}}" alt="Third slide">
                   </a>
                 </div>
-                <div class="carousel-item">
-                  <a class="gallery_img" href="assets/img/product-img/pro-big-4.jpg">
-                    <img class="d-block w-100" src="assets/mg/product-img/pro-big-4.jpg" alt="Fourth slide">
+                <div class="carousel-item" *ngIf="product.image04 != null">
+                  <a class="gallery_img" href="{{product.image04}}">
+                    <img class="d-block   w-100" src="{{product.image04}}" alt="Fourth slide">
                   </a>
                 </div>
+
+
+                <div class="carousel-item" *ngIf="product.image05 != null">
+                  <a class="gallery_img" href="{{product.image05}}">
+                    <img class="d-block  w-100" src="{{product.image05}}" alt="Fourth slide">
+                  </a>
+                </div>
+                <div class="carousel-item" *ngIf="product.image06 != null">
+                  <a class="gallery_img" href="{{product.image06}}">
+                    <img class="d-block  w-100" src="{{product.image06}}" alt="Fourth slide">
+                  </a>
+                </div>
+                <div class="carousel-item" *ngIf="product.image07 != null">
+                  <a class="gallery_img" href="{{product.image07}}">
+                    <img class="d-block  w-100" src="{{product.image07}}" alt="Fourth slide">
+                  </a>
+                </div>
+                <div class="carousel-item" *ngIf="product.image08 != null">
+                  <a class="gallery_img" href="{{product.image08}}">
+                    <img class="d-block w-100" src="{{product.image08}}" alt="Fourth slide">
+                  </a>
+                </div>
+
               </div>
             </div>
+
+
           </div>
+
         </div>
-        <div class="col-12 col-lg-5">
+        <div class="col-12 col-lg-1" ></div>
+        <div class="col-12 col-lg-6">
           <div class="single_product_desc">
             <!-- Product Meta Data -->
             <div class="product-meta-data">
               <div class="line"></div>
-              <p class="product-price">$180</p>
+              <p class="product-price">{{product.price}}</p>
               <a href="product-details.html">
-                <h6>White Modern Chair</h6>
+                <h6>{{product.name}}</h6>
               </a>
               <!-- Ratings & Review -->
               <div class="ratings-review mb-15 d-flex align-items-center justify-content-between">
@@ -90,32 +127,29 @@
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
-                <div class="review">
-                  <a href="#">Write A Review</a>
-                </div>
               </div>
               <!-- Avaiable -->
-              <p class="avaibility"><i class="fa fa-circle"></i> In Stock</p>
+              <p class="avaibility"><i class="fa fa-circle"></i> Còn hàng</p>
             </div>
 
             <div class="short_overview my-5">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid quae eveniet culpa officia quidem mollitia impedit iste asperiores nisi reprehenderit consequatur, autem, nostrum pariatur enim?</p>
+              <p>{{product.description}}</p>
             </div>
-
-            <!-- Add to Cart Form -->
-            <form class="cart clearfix" method="post">
+            <form class="cart clearfix" [formGroup]="addProductForm" (ngSubmit)="addDishIntoCart()">
               <div class="cart-btn d-flex mb-50">
-                <p>Qty</p>
+                <p>Số lượng</p>
                 <div class="quantity">
                   <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;"><i class="fa fa-caret-down" aria-hidden="true"></i></span>
-                  <input type="number" class="qty-text" id="qty" step="1" min="1" max="300" name="quantity" value="1">
+                  <input type="number" class="form-control"  id="qty" step="1" min="1" max="300" name="quantity"  formControlName="quantity" value="1">
                   <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;"><i class="fa fa-caret-up" aria-hidden="true"></i></span>
                 </div>
               </div>
-              <button type="submit" name="addtocart" value="5" class="btn amado-btn">Add to cart</button>
+              <button  type="submit" name="addtocart" value="5" class="btn btn-warning">Thêm Vào Giỏ</button>
+              <a class="btn btn-primary m-5">Mua ngay</a>
             </form>
 
           </div>
+
         </div>
       </div>
     </div>
