--- a/src/app/customer/share/newsletter/newsletter.component.html
+++ b/src/app/customer/share/newsletter/newsletter.component.html
@@ -12,10 +12,10 @@
       <!-- Newsletter Form -->
       <div class="col-12 col-lg-6 col-xl-5">
         <div class="newsletter-form mb-100">
-          <form action="#" method="post">
+<!--          <form action="#" method="post">-->
             <input type="email" name="email" class="nl-email" placeholder="Your E-mail">
             <input type="submit" value="Subscribe">
-          </form>
+<!--          </form>-->
         </div>
       </div>
     </div>
