--- a/src/app/customer/share/sidebar/sidebar.component.html
+++ b/src/app/customer/share/sidebar/sidebar.component.html
@@ -6,24 +6,25 @@
   </div>
   <!-- Logo -->
   <div class="logo">
-    <a href="index.html"><img src="assets/img/core-img/logo.png" alt=""></a>
+    <a href="index.html"><img src="assets/img/core-img/logo_newhouse.jpg" alt=""></a>
   </div>
   <!-- Amado Nav -->
   <nav class="amado-nav">
     <ul>
-      <li id ="home_sidebar"><a href="newhouse">Trang chủ</a></li>
-      <li id="shop_sidebar" ><a href="newhouse/shop">Sản Phẩm</a></li>
-      <li id="company_sidebar"><a href="newhouse">Về Công ty</a></li>
+      <li ><a href="newhouse">Trang chủ</a></li>
+      <li ><a href="newhouse/shop">Sản Phẩm</a></li>
+      <li  ><a href="newhouse/shop">Bán chạy</a></li>
+      <li ><a href="newhouse">Về Công ty</a></li>
     </ul>
   </nav>
   <!-- Button Group -->
   <div class="amado-btn-group mt-30 mb-100">
-    <a href="newhouse/checkout/1" class="btn amado-btn mb-15">Thanh toán</a>
+
   </div>
   <!-- Cart Menu -->
   <div class="cart-fav-search mb-100">
-    <a href="newhouse/cart/1" class="cart-nav"><img src="assets/img/core-img/cart.png" alt=""> Giỏ hàng <span>(0)</span></a>
-    <a href="#" class="fav-nav"><img src="assets/img/core-img/favorites.png" alt=""> Yêu Thích</a>
+    <a href="newhouse/cart/1" class="cart-nav"><img src="assets/img/core-img/cart.png" alt=""> Giỏ hàng <span>({{this.cartLength}})</span></a>
+    <a href="#" class="fav-nav"><img src="assets/img/core-img/favorites.png" alt=""> Đã mua </a>
     <a href="#" class="search-nav"><img src="assets/img/core-img/search.png" alt=""> Tìm Kiếm</a>
   </div>
   <!-- Social Button -->
