--- a/src/app/customer/share/sidebar/sidebar.component.html
+++ b/src/app/customer/share/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
   <nav class="amado-nav">
     <ul>
       <li ><a href="newhouse">Trang chủ</a></li>
-      <li ><a href="newhouse/shop">Sản Phẩm</a></li>
+      <li ><a href="newhouse/shop/0">Sản Phẩm</a></li>
       <li  ><a href="newhouse/shop">Bán chạy</a></li>
       <li ><a href="newhouse">Về Công ty</a></li>
     </ul>
@@ -23,7 +23,7 @@
   </div>
   <!-- Cart Menu -->
   <div class="cart-fav-search mb-100">
-    <a href="newhouse/cart/1" class="cart-nav"><img src="assets/img/core-img/cart.png" alt=""> Giỏ hàng <span>({{this.cartLength}})</span></a>
+    <a href="newhouse/cart" class="cart-nav"><img src="assets/img/core-img/cart.png" alt=""> Giỏ hàng <span>({{this.cartLength}})</span></a>
     <a href="#" class="fav-nav"><img src="assets/img/core-img/favorites.png" alt=""> Đã mua </a>
     <a href="#" class="search-nav"><img src="assets/img/core-img/search.png" alt=""> Tìm Kiếm</a>
   </div>
