--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -15,20 +15,19 @@
   </div>
 
 <app-sidebar></app-sidebar>
-
   <!-- Product Catagories Area Start -->
   <div class="products-catagories-area clearfix">
-    <div class="amado-pro-catagory clearfix" >
+    <div class="amado-pro-catagory clearfix">
 
       <!-- Single Catagory -->
-      <div class="single-products-catagory clearfix" style="font-size: 15px " *ngFor="let category of categories;">
-        <a (click)="getDishByCategory(category.id)">
-          <img src="assets/img/product-img" alt="">
+      <div class="single-products-catagory clearfix" style="font-size: 15px" *ngFor="let category of categories; index as i">
+        <a href="shop.html">
+          <img src="assets/img/bg-img/1.jpg" alt="">
           <!-- Hover Content -->
           <div class="hover-content">
             <div class="line"></div>
-            <p>{{category.description}}</p>
-            <h4>{{category.name}}</h4>
+            <p>{{categories[i].name}}</p>
+            <h4>{{categories[i].description}}</h4>
           </div>
         </a>
       </div>
@@ -37,6 +36,7 @@
   </div>
   <!-- Product Catagories Area End -->
 </div>
+
 <!-- ##### Main Content Wrapper End ##### -->
 <!--<app-newsletter></app-newsletter>-->
 <app-footer></app-footer>
