--- a/src/app/customer/home/home.component.html
+++ b/src/app/customer/home/home.component.html
@@ -20,7 +20,7 @@
     <div class="amado-pro-catagory clearfix">
 
       <!-- Single Catagory -->
-      <div class="single-products-catagory clearfix" style="font-size: 15px" *ngFor="let category of categories; index as i">
+      <div class="single-products-catagory clearfix" *ngFor="let category of categories; index as i">
         <a href="shop.html">
           <img src="assets/img/bg-img/1.jpg" alt="">
           <!-- Hover Content -->
